# PerformanceSimplex

./: .gitignore  CMakeLists.txt  Makefile  README.md  SimplexTest.hxx  benchmark_simplex.cpp  create_simplex_data.cxx  main  main.cxx  simplex.hxx  test_simplex  test_simplex.cxx
test/: data.raw  data.sol  data.txt  data2.raw  data2.sol  data2.txt  data3.raw  data3.sol  data3.txt  dataX.raw  dataX.txt
